Servicios/depappl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appm
spec:
  selector:
    matchLabels:
      app: webapp
  replicas: 1
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: appmcontenedor
        image: aideeds/appmaq
        ports:
        - containerPort: 80
