Servicios/depdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: makdb
spec:
  selector:
    matchLabels:
      app: appweb
  replicas: 1
  template:
    metadata:
      labels:
        app: appweb
    spec:
      containers:
      - name: appwebcontenedor
        image: aideeds/dbmaq
        ports:
        - containerPort: 3306

       volumeMounts:
        - name: volumdb
          mountPath: var/lib/mysql
        
      volumes:
      - name: volumdb

        persistentVolumeClaim:
          claimName: volumdbclaim
