Servicios/serviceapp.yaml
apiVersion: v1
kind: Service 
metadata:
  name: appms
  labels:
    app: webapp
spec:
    type: NodePort
    ports: 
    - port: 80
      protocol: "TCP"
      targetPort: 80
    selector:
      app: webapp
